Correct the alignment of the feedback notice.
The feedback notice is centre aligned. Which means when only the
primary action is shown, without a text link, the margin on the
primary action is noticable and causes misalignment.

--- a/src/scss/_state.scss
+++ b/src/scss/_state.scss
@@ -98,6 +98,10 @@
 		margin-right: oSpacingByName('s6');
 	}
 
+	.o-message__actions__primary:only-child {
+		margin-right: 0;
+	}
+
 	// action link
 	.o-message__actions__secondary {
 		@include oTypographyLink(
